[package]
name = "candela"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1", features = ["full", "io-util", "io-std", "net", "rt-multi-thread"] }
openssl = { version = "0.10", features = ["vendored"] }
clap = "3.0.0"
futures = "0.3.30"
regex = "1.10.3"
encoding_rs = "0.8.33"
fantoccini = "0.19.3"
webdriver = "0.50.0"
